// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`addPrice 1`] = `
Array [
  Array [
    "price",
  ],
]
`;

exports[`getPrices 1`] = `
Array [
  Array [
    "src",
    10,
    123,
    456,
    "pair",
  ],
]
`;

exports[`init only dynamo 1`] = `
Object {
  "test": "DynamoUtil",
}
`;

exports[`init only dynamo 2`] = `
Array [
  true,
  "process",
]
`;

exports[`init server 1`] = `
Object {
  "test": "DynamoUtil",
}
`;

exports[`init server 2`] = `
Array [
  false,
  "process",
]
`;

exports[`insertEventsData 1`] = `
Array [
  Array [
    "events",
  ],
]
`;

exports[`insertHeartbeat 1`] = `
Array [
  Array [
    Object {},
  ],
  Array [
    "data",
  ],
]
`;

exports[`insertPrice 1`] = `
Array [
  Array [
    "price",
  ],
]
`;

exports[`insertTradeData 1`] = `
Array [
  Array [
    "trade",
    true,
  ],
]
`;

exports[`insertTradeData 2`] = `
Array [
  Array [
    "trade",
    false,
  ],
]
`;

exports[`readLastBlock 1`] = `
Array [
  Array [],
]
`;

exports[`readLastPrice 1`] = `
Array [
  Array [
    "quote",
    "base",
  ],
]
`;

exports[`readSourceData 1`] = `
Array [
  Array [
    123,
    "base",
    "quote",
  ],
]
`;
